--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Mark Vayngrib <mark.vayngrib@lablz.com> (http://github.com/mvayngrib)",
   "license": "MIT",
   "dependencies": {
+    "minimist": "^1.1.1",
     "utp": "0.0.8"
   }
 }
