--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "license": "MIT",
   "dependencies": {
     "minimist": "^1.1.1",
-    "utp": "0.0.8"
+    "utp": "git://github.com/mvayngrib/utp#dev"
   }
 }
